--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   mongo:
     image: mongo
@@ -13,7 +11,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - MONGO_URI=mongodb://mongo:27017/habit-tracker
-      - JWT_SECRET=sua-chave-secreta
+      - MONGO_URI=${MONGO_URi}
+      - JWT_SECRET=${JWT_SECRET}
     depends_on:
       - mongo
